--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.application.name=shop
 
-server.port=80
+server.port=8080
 
-spring.datasource.driver-class-name=com.mysql.dj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/shop?serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/shop
 spring.datasource.username=root
 spring.datasource.password=hy6968727
+spring.devtools.livereload.enabled=true
 
 spring.jpa.properties.hibernate.show_sql=true
-
 spring.jpa.properties.hibernate.format_sql=true
-
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platf
