--- a/pom.xml
+++ b/pom.xml
@@ -117,13 +117,4 @@
 			<!--				<configuration>-->
 			<!--					<excludes>-->
 			<!--						<exclude>-->
-			<!--							<groupId>org.projectlombok</groupId>-->
-			<!--							<artifactId>lombok</artifactId>-->
-			<!--						</exclude>-->
-			<!--					</excludes>-->
-			<!--				</configuration>-->
-			<!--			</plugin>-->
-		</plugins>
-	</build>
-
-</project>
+			<!--							<groupId>org.projectlombok</
